<resources>
    <string name="app_name">StankiRF</string>
    <string name="loginButton">Войти</string>
    <string name="loginEdit">Введите логин и пароль, чтобы войти</string>
    <string name="emailText">Email</string>
    <string name="passwordText">Пароль</string>
    <string name="passwordTextRepeat">Повторите пароль</string>
    <string name="registerEditText"><u>Зарегистрироваться</u></string>
    <string name="registerBtn">Зарегистрироваться</string>
    <string name="validLogin">"Некерректный формат почты"</string>
    <string name="validPassword">"Пароль не может быть короче 6 символов"</string>
    <string name="validSamePasswords">Пароли должны быть одинаковыми</string>
    <string name="logout">Выйти</string>
    <string name="appInfo">О приложении</string>
    <string name="favoriteMachines">Избранное</string>
    <string name="yes">ДА</string>
    <string name="no">Нет</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="search_bar">Поиск</string>
    <string name="back">Назад</string>
    <string name="characteristics">Характеристики</string>
    <string name="analogs">Аналоги</string>
    <string name="buttonAddFavorite">Добавить в избранное</string>
    <string name="askDeleteFavorite">Удалить из избранного?</string>

    <string name="modelNameText">"Модель: "</string>
    <string name="producingCountryText">"Страна: "</string>
    <string name="producerText">"Производитель: "</string>
    <string name="machineGroupText">"Группа станков: "</string>
    <string name="machineTypeText">"Тип станков: "</string>

    <string name="shortInformation">Краткая информация</string>

    <!-- Заголовки Токарного ЧПУ станка -->
    <string name="cncLatheTitle1">Система ЧПУ, конструкция</string>
    <string name="cncLatheTitle2">Параметры точения, заготовки</string>
    <string name="cncLatheTitle3">Шпиндель</string>
    <string name="cncLatheTitle4">Инструмент</string>
    <string name="cncLatheTitle5">Габариты, вес, энергопотребление</string>

    <!-- Параметры Токарного ЧПУ станка -->
    <string name="cncSystem">"Система ЧПУ: "</string>
    <string name="bed">"Станина: "</string>
    <string name="maximumDiameterRotation">"Максимальный диаметр вращения над станиной, мм: "</string>
    <string name="maximumTurningDiameter">"Максимальный диаметр точения, мм: "</string>
    <string name="maximumWorkpieceLength">"Максимальная длина заготовки, мм: "</string>
    <string name="maximumSpindleSpeed">"Максимальные обороты шпинделя, об/мин: "</string>
    <string name="spindleMotorPower">"Мощность двигателя шпинделя, кВт: "</string>
    <string name="counterSpindle">"Противошпиндель: "</string>
    <string name="tool">"Инструмент: "</string>
    <string name="toolNumber">"Количество инструмента: "</string>
    <string name="totalMachinePower">"Суммарная мощность станка, кВт: "</string>
    <string name="length">"Длина, мм: "</string>
    <string name="machineWidth">"Ширина, мм: "</string>
    <string name="height">"Высота, мм: "</string>
    <string name="weight">"Вес, кг: "</string>
</resources>
