<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/searchMachines"
            android:icon="@drawable/ic_search"
            android:checked="true"
            android:title="@string/search_bar" />
        <item
            android:id="@+id/favoriteMachines"
            android:icon="@drawable/ic_star"
            android:title="@string/favoriteMachines" />
    </group>

    <group android:checkableBehavior="none"
        android:id="@+id/systemItemUser">
        <item
            android:id="@+id/appInfo"
            android:icon="@drawable/ic_info"
            android:title="@string/appInfo" />

        <item
            android:id="@+id/exit"
            android:title="@string/logout"/>
    </group>
</menu>