<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:paddingHorizontal="15dp"
        app:srcCompat="@drawable/screensaver" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView"
        android:layout_marginBottom="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/loginEdit"
            android:layout_marginBottom="3dp"
            android:textColor="@color/black" />

        <EditText
            style="@style/styles_for_edit_text"
            android:id="@+id/editInputLogin"
            android:background="@drawable/draw_style_for_text_view_login_top"
            android:layout_width="match_parent"
            android:layout_marginBottom="2dp"
            android:autofillHints="@string/emailText"
            android:hint="@string/emailText"
            android:inputType="textEmailAddress" />

        <EditText
            style="@style/styles_for_edit_text"
            android:id="@+id/editInputPassword"
            android:background="@drawable/draw_style_for_text_view_login_bottom"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/passwordText"
            android:hint="@string/passwordText"
            android:inputType="textPassword" />

        <Button
            android:background="@drawable/draw_style_button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/loginButton"
            android:id="@+id/buttonSingIn"/>

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/registerEditText"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/black" />

    </LinearLayout>

</RelativeLayout>