<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/textViewAsk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginVertical="15dp"
        android:text="@string/askDeleteFavorite"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnNo"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/textViewAsk"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/draw_style_button_red"
        android:textSize="15sp"
        android:text="@string/no"/>

    <Button
        android:id="@+id/btnYes"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/textViewAsk"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/draw_style_button_login"
        android:textSize="15sp"
        android:text="@string/yes"/>
</RelativeLayout>